--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "history": "^4.7.2",
     "lodash": "^4.17.10",
     "react": "^16.2.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
-    "react-table": "^6.8.2"
+    "react-table": "^6.8.2",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "start": "PORT=3006 react-scripts start",
