--- a/package.json
+++ b/package.json
@@ -3,17 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coreui/coreui": "^2.0.4",
+    "@coreui/icons": "0.2.0",
+    "@coreui/react": "^2.0.5",
+    "bootstrap": "^4.1.3",
     "axios": "^0.18.0",
     "firebase": "^4.11.0",
+    "font-awesome": "^4.7.0",
     "history": "^4.7.2",
     "lodash": "^4.17.10",
-    "react": "^16.2.0",
-    "react-addons-css-transition-group": "^15.6.2",
-    "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1",
-    "react-table": "^6.8.2",
-    "uuid": "^3.2.1"
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-loadable": "^5.4.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4",
+    "react-table": "^6.8.6",
+    "reactstrap": "^6.3.1",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "PORT=3006 react-scripts start",
