--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "@coreui/coreui": "^2.0.4",
     "@coreui/icons": "0.2.0",
     "@coreui/react": "^2.0.5",
-    "bootstrap": "^4.1.3",
     "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
     "firebase": "^4.11.0",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
     "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-loadable": "^5.4.0",
