--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@coreui/react": "^2.0.5",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "classnames": "^2.2.6",
     "firebase": "^4.11.0",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
