--- a/package.json
+++ b/package.json
@@ -16,17 +16,21 @@
     "eslint-plugin-prettier": "^2.6.2",
     "firebase": "^4.11.0",
     "font-awesome": "^4.7.0",
+    "google-map-react": "^1.0.6",
     "history": "^4.7.2",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "prettier": "^1.14.2",
     "react": "^16.4.1",
+    "react-big-calendar": "^0.19.2",
     "react-dom": "^16.4.1",
     "react-loadable": "^5.4.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-select": "^2.0.0",
     "react-table": "^6.8.6",
     "reactstrap": "^6.3.1",
+    "sweetalert2": "^7.26.11",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
