--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "prettier": "^1.14.2",
     "react": "^16.4.1",
     "react-big-calendar": "^0.19.2",
+    "react-country-region-selector": "^1.3.0",
     "react-dom": "^16.4.1",
     "react-loadable": "^5.4.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-select": "^2.0.0",
+    "react-select-currency": "^1.0.7",
     "react-table": "^6.8.6",
     "reactstrap": "^6.3.1",
     "sweetalert2": "^7.26.11",
