--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "prettier": "^1.14.2",
+    "query-string": "^6.1.0",
     "react": "^16.4.1",
     "react-big-calendar": "^0.19.2",
     "react-country-region-selector": "^1.3.0",
     "react-dom": "^16.4.1",
     "react-images": "^0.5.19",
     "react-loadable": "^5.4.0",
+    "react-loading": "^2.0.3",
     "react-photo-gallery": "^6.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
