--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "eslint-plugin-prettier": "^2.6.2",
     "firebase": "^4.11.0",
     "font-awesome": "^4.7.0",
-    "google-map-react": "^1.0.6",
     "history": "^4.7.2",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "prettier": "^1.14.2",
     "query-string": "^6.1.0",
@@ -26,6 +25,7 @@
     "react-big-calendar": "^0.19.2",
     "react-country-region-selector": "^1.3.0",
     "react-dom": "^16.4.1",
+    "react-google-maps": "^9.4.5",
     "react-images": "^0.5.19",
     "react-loadable": "^5.4.0",
     "react-loading": "^2.0.3",
@@ -37,6 +37,7 @@
     "react-switch": "^3.0.4",
     "react-table": "^6.8.6",
     "reactstrap": "^6.3.1",
+    "recompose": "^0.30.0",
     "sweetalert2": "^7.26.11",
     "uuid": "^3.3.2"
   },
