--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "prettier": "^1.14.2",
     "query-string": "^6.1.0",
     "react": "^16.4.1",
-    "react-big-calendar": "^0.19.2",
     "react-country-region-selector": "^1.3.0",
+    "react-day-picker": "^7.2.4",
     "react-dom": "^16.4.1",
     "react-google-maps": "^9.4.5",
     "react-images": "^0.5.19",
