--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^4.11.0",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
+    "js-sha1": "^0.6.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "prettier": "^1.14.2",
@@ -30,7 +31,9 @@
     "react-loadable": "^5.4.0",
     "react-loading": "^2.0.3",
     "react-photo-gallery": "^6.2.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.4",
     "react-select": "^2.0.0",
     "react-select-currency": "^1.0.7",
@@ -38,6 +41,8 @@
     "react-table": "^6.8.6",
     "reactstrap": "^6.3.1",
     "recompose": "^0.30.0",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "sweetalert2": "^7.26.11",
     "uuid": "^3.3.2"
   },
