--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "prettier": "^1.14.2",
-    "query-string": "^6.1.0",
+    "query-string": "5.1.1",
     "react": "^16.4.1",
     "react-day-picker": "^7.2.4",
     "react-dom": "^16.4.1",
