--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
+    "cloudinary-core": "^2.5.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-config-prettier": "^2.9.0",
@@ -26,16 +27,13 @@
     "react-day-picker": "^7.2.4",
     "react-dom": "^16.4.1",
     "react-google-maps": "^9.4.5",
-    "react-images": "^0.5.19",
     "react-loadable": "^5.4.0",
     "react-loading": "^2.0.3",
-    "react-photo-gallery": "^6.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.4",
     "react-select": "^2.0.0",
-    "react-switch": "^3.0.4",
     "react-table": "^6.8.6",
     "reactstrap": "^6.3.1",
     "recompose": "^0.30.0",
